--- a/main.html
+++ b/main.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Meditation App</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div id="app">
+    <div class="vid-container">
+      <video class="video" loop muted></video>
+    </div>
 
+    <div class="player-container">
+      <div class="sound-picker">
+        <button data-sound="Sounds/beach.mp3" data-video="Sounds/beach.mp4">Meditation-A</button>
+        <button data-sound="Sounds/rain.mp3" data-video="Sounds/rain.mp4">Meditation-B</button>
+      </div>
+
+      <div id="time-select">
+        <button id="smaller-mins">2 min</button>
+        <button id="medium-mins">5 min</button>
+        <button id="long-mins">10 min</button>
+      </div>
+
+      <button class="play">Play</button>
+
+      <div class="time-display">10:0</div>
+    </div>
+
+    <audio class="sound"></audio>
+  </div>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
