--- a/main.html
+++ b/main.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Meditation App</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div id="app">
     <div class="vid-container">
-      <video class="video" loop muted></video>
+      <video loop class="video" width="100%" height="auto">
+        <source src="Videos/beach.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
     </div>
 
     <div class="player-container">
       <div class="sound-picker">
-        <button data-sound="Sounds/beach.mp3" data-video="Sounds/beach.mp4">Meditation-A</button>
-        <button data-sound="Sounds/rain.mp3" data-video="Sounds/rain.mp4">Meditation-B</button>
+        <button data-sound="Sounds/beach.mp3" data-video="Videos/beach.mp4">Meditation A</button>
+        <button data-sound="Sounds/rain.mp3" data-video="Videos/rain.mp4">Meditation B</button>
       </div>
 
       <div id="time-select">
-        <button id="smaller-mins">2 min</button>
-        <button id="medium-mins">5 min</button>
-        <button id="long-mins">10 min</button>
+        <button id="smaller-mins" data-time="120">2 Min</button>
+        <button id="medium-mins" data-time="300">5 Min</button>
+        <button id="long-mins" data-time="600">10 Min</button>
       </div>
 
-      <button class="play">Play</button>
-
       <div class="time-display">10:0</div>
+      <button class="play">Play</button>
     </div>
 
-    <audio class="sound"></audio>
+    <audio class="audio">
+      <source src="Sounds/beach.mp3" type="audio/mp3" />
+    </audio>
   </div>
 
   <script src="script.js"></script>
