--- a/main.html
+++ b/main.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Meditation App</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div id="app">
+  <div class="app">
     <div class="vid-container">
-      <video loop class="video" width="100%" height="auto">
-        <source src="Videos/beach.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
+      <video class="video" src="meditation1.mp4" loop></video>
     </div>
 
     <div class="player-container">
+      <audio class="audio" src="sound1.mp3"></audio>
+      <button class="play">▶️</button>
+      <div class="time-display">10:00</div>
+      <div class="time-select">
+        <button class="smaller-mins">2 Minutes</button>
+        <button class="medium-mins">5 Minutes</button>
+        <button class="long-mins">10 Minutes</button>
+      </div>
       <div class="sound-picker">
-        <button data-sound="Sounds/beach.mp3" data-video="Videos/beach.mp4">Meditation A</button>
-        <button data-sound="Sounds/rain.mp3" data-video="Videos/rain.mp4">Meditation B</button>
+        <button data-sound="sound1.mp3" data-video="meditation1.mp4">Meditation A</button>
+        <button data-sound="sound2.mp3" data-video="meditation2.mp4">Meditation B</button>
       </div>
-
-      <div id="time-select">
-        <button id="smaller-mins" data-time="120">2 Min</button>
-        <button id="medium-mins" data-time="300">5 Min</button>
-        <button id="long-mins" data-time="600">10 Min</button>
-      </div>
-
-      <div class="time-display">10:0</div>
-      <button class="play">Play</button>
     </div>
-
-    <audio class="audio">
-      <source src="Sounds/beach.mp3" type="audio/mp3" />
-    </audio>
   </div>
 
   <script src="script.js"></script>
